Update to run on push

--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,6 +1,8 @@
 name: SAD weekly build smoke
 
 on:
+  push:
+    branches: [ main ]
   schedule:
     # Every Sunday at 03:00 UTC
     - cron: '0 3 * * 0'
