--- a/.github/workflows/docker-build-tests.yml
+++ b/.github/workflows/docker-build-tests.yml
@@ -1,8 +1,8 @@
-name: SAD nightly tests
+name: Docker Rebuild SAD vs Xsuite Comparison Tests
 
 on:
   workflow_run:
-    workflows: [ "Build & Smoke" ]
+    workflows: [ "Docker Rebuild" ]
     types: [ completed ]
 
 permissions:
