--- a/.github/workflows/docker-build-tests.yml
+++ b/.github/workflows/docker-build-tests.yml
@@ -9,15 +9,25 @@ permissions:
   contents: read
   packages: read
 
+concurrency:
+  group: tests-after-rebuild-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  run-tests:
+  run-tests-docker-rebuild:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-24.04
+    timeout-minutes: 120
     steps:
-      - name: Checkout the exact commit that triggered Build & Smoke
+      - name: Checkout the exact commit that triggered the rebuild
         uses: actions/checkout@v4
         with:
           ref: ${{ github.event.workflow_run.head_sha }}
+
+      - name: Set IMAGE env (lowercase)
+        run: |
+          OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE=ghcr.io/${OWNER_LC}/sad2xs-sad" >> "$GITHUB_ENV"
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -26,16 +36,24 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Pull the image built from that commit
+      - name: Pull image built by the rebuild (fallback to :latest)
+        id: pull
         run: |
-          docker pull ghcr.io/${{ github.repository_owner }}/sad2xs-sad:${{ github.event.workflow_run.head_sha }}
+          IMG_SHA="${IMAGE}:${{ github.event.workflow_run.head_sha }}"
+          if docker pull "$IMG_SHA"; then
+            echo "image_ref=$IMG_SHA" >> "$GITHUB_OUTPUT"
+          else
+            echo "SHA tag not found, falling back to :latest"
+            docker pull "${IMAGE}:latest"
+            echo "image_ref=${IMAGE}:latest" >> "$GITHUB_OUTPUT"
+          fi
 
-      - name: Run test suite in that image
+      - name: Run tests inside the image
         env:
           SKIP_SMOKE: "1"
         run: |
           docker run --rm \
             -e SKIP_SMOKE \
             -v "$GITHUB_WORKSPACE":/work -w /work \
-            ghcr.io/${{ github.repository_owner }}/sad2xs-sad:${{ github.event.workflow_run.head_sha }} \
+            "${{ steps.pull.outputs.image_ref }}" \
             pytest -q
