--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,30 +11,50 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: docker-rebuild-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
-  build-and-smoke:
+  rebuild-docker:
     runs-on: ubuntu-24.04
-    timeout-minutes: 60
+    permissions:
+      contents: read
+      packages: write
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+      - uses: docker/setup-buildx-action@v3
 
-      - name: Build image (load to runner; cache to/from GHA)
+      - name: Compute image name (lowercase)
+        id: img
+        run: |
+          OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "image=ghcr.io/${OWNER_LC}/sad2xs-sad" >> "$GITHUB_OUTPUT"
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build & push image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: ./Dockerfile
-          tags: sad2xs/sad:ci
-          load: true
+          platforms: linux/amd64
+          push: true
+          tags: |
+            ${{ steps.img.outputs.image }}:${{ github.sha }}
+            ${{ steps.img.outputs.image }}:latest
           build-args: |
             SAD_SMOKE_PATH=tests/sad_installation_test.sad
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Run smoke test (assert SAD starts)
+      - name: Smoke (SAD starts) using freshly pushed image
         run: |
-          # EntryPoint already runs the smoke test; we also call it explicitly for clarity
-          docker run --rm sad2xs/sad:ci sad-smoke /opt/smoke.sad 20
+          docker run --rm ${{ steps.img.outputs.image }}:${{ github.sha }} \
+            sad-smoke /opt/smoke.sad 20
