--- a/.github/workflows/nightly-tests.yml
+++ b/.github/workflows/nightly-tests.yml
@@ -8,37 +8,51 @@ on:
 
 permissions:
   contents: read
+  packages: read
+
+concurrency:
+  group: nightly-tests-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  tests:
+  run-tests-nightly:
     runs-on: ubuntu-24.04
     timeout-minutes: 120
     steps:
-      - name: Checkout
+      - name: Checkout main (tests/config)
         uses: actions/checkout@v4
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build image (load to runner; cache to/from GHA)
-        uses: docker/build-push-action@v6
         with:
-          context: .
-          file: ./Dockerfile
-          tags: sad2xs/sad:test
-          load: true
-          build-args: |
-            SAD_SMOKE_PATH=tests/sad_installation_test.sad
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          ref: main
 
-      - name: Run full test suite (pytest)
+      - name: Set IMAGE env (lowercase)
+        run: |
+          OWNER_LC=$(echo "${{ github.repository_owner }}" | tr '[:upper:]' '[:lower:]')
+          echo "IMAGE=ghcr.io/${OWNER_LC}/sad2xs-sad" >> "$GITHUB_ENV"
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pull latest image (fallback to :main)
+        id: pull
+        run: |
+          if docker pull "${IMAGE}:latest"; then
+            echo "image_ref=${IMAGE}:latest" >> "$GITHUB_OUTPUT"
+          else
+            echo "LATEST not found, trying :main"
+            docker pull "${IMAGE}:main"
+            echo "image_ref=${IMAGE}:main" >> "$GITHUB_OUTPUT"
+          fi
+
+      - name: Run full test suite
         env:
-          # Skip entrypoint smoke to go straight to pytest
-          SKIP_SMOKE: "1"
+          SKIP_SMOKE: "1"   # skip entrypoint smoke; go straight to pytest
         run: |
           docker run --rm \
             -e SKIP_SMOKE \
             -v "$GITHUB_WORKSPACE":/work -w /work \
-            sad2xs/sad:test \
+            "${{ steps.pull.outputs.image_ref }}" \
             pytest -q
