--- a/.github/workflows/004_reversal_test.yml
+++ b/.github/workflows/004_reversal_test.yml
@@ -1,4 +1,4 @@
-name: Test 001-Drift
+name: Test 004-Reversal
 
 on:
   workflow_run:
@@ -13,7 +13,7 @@ permissions:
   packages: read
 
 concurrency:
-  group: test-001-drift-${{ github.ref }}
+  group: test-004-reversal-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -25,5 +25,5 @@ jobs:
       pull_tag: latest
       test_files: |
         # List the relevant tests here (exact paths)
-        tests/test_001_drift.py
+        tests/test_010_line_reversal.py
     secrets: inherit
