--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # =============================================
 # Author(s):  John P T Salvesen
 # Email:      john.salvesen@cern.ch
-# Date:       30-09-2025
+# Date:       01-10-2025
 # ==============================================================================
 
 # ==============================================================================
@@ -59,9 +59,8 @@ build_instructions
 /tests/temporary_sad_twiss.tfs
 
 # ==============================================================================
-# Ignore local and private test files
+# Ignore private lattice files
 # ==============================================================================
-/misc
 /private_lattice_tests
 
 # ==============================================================================
