--- a/.github/workflows/007_sol_test.yml
+++ b/.github/workflows/007_sol_test.yml
@@ -1,4 +1,4 @@
-name: Test 004-Reversal
+name: Test 007-Solenoid
 
 on:
   workflow_run:
@@ -13,7 +13,7 @@ permissions:
   packages: read
 
 concurrency:
-  group: test-004-reversal-${{ github.ref }}
+  group: test-007-sol-${{ github.ref }}
   cancel-in-progress: true
 
 jobs:
@@ -25,5 +25,9 @@ jobs:
       pull_tag: latest
       test_files: |
         # List the relevant tests here (exact paths)
-        tests/test_010_line_reversal.py
+        tests/test_007a_sol_off_geo_in_in.py
+        tests/test_007b_sol_off_geo_in_out.py
+        tests/test_007c_sol_off_geo_out_in.py
+        tests/test_007d_sol_off_geo_out_out.py
+        tests/test_007e_sol_on.py
     secrets: inherit
