Add private dev folder to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,8 @@ build_instructions
 # Ignore output lattices
 # ==============================================================================
 /lattice_tests/out
+
+# ==============================================================================
+# Ignore local development
+# ==============================================================================
+/dev
